# mcp-ifttt

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  pyproject.toml  requirements.txt  server.py
src/mcp_ifttt/: __init__.py  server.py
