[project]
name = "mcp-ifttt"
version = "1.0.0"
description = "MCP server for triggering IFTTT webhooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-ifttt = "mcp_ifttt.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ifttt"]
